Hide filepath label on small screens, see https://github.com/hydephp/framework/issues/495

--- a/sass/MarkdownFeatures.scss
+++ b/sass/MarkdownFeatures.scss
@@ -32,3 +32,9 @@ pre>code>.filepath {
 .torchlight-enabled pre>code>.filepath {
     right: 1rem;
 }
+
+@media screen and (max-width: 767px) {
+	pre>code>.filepath {
+		display: none;
+	}
+}
